@@ -23,6 +23,7 @@ import java.util.regex.Pattern;
 
 import org.apache.kafka.clients.consumer.ConsumerRebalanceListener;
 import org.apache.kafka.clients.consumer.OffsetCommitCallback;
+import org.apache.kafka.common.errors.AuthenticationException;
 
 import org.springframework.kafka.support.LogIfLevelEnabled;
 import org.springframework.kafka.support.TopicPartitionOffset;
@@ -101,7 +102,7 @@ public class ConsumerProperties {
 
 	private Properties kafkaConsumerProperties = new Properties();
 
-	private Duration authorizationExceptionRetryInterval;
+	private Duration authExceptionRetryInterval;
 
 	private int commitRetries = DEFAULT_COMMIT_RETRIES;
 
@@ -347,22 +348,54 @@ public class ConsumerProperties {
 		this.kafkaConsumerProperties = kafkaConsumerProperties;
 	}
 
+	/**
+	 * Get the authentication/authorization retry interval.
+	 * @return the interval.
+	 * @deprecated in favor of {@link #getAuthExceptionRetryInterval()}.
+	 */
+	@Deprecated
+	@Nullable
 	public Duration getAuthorizationExceptionRetryInterval() {
-		return this.authorizationExceptionRetryInterval;
+		return this.authExceptionRetryInterval;
 	}
 
 	/**
-	 * Set the interval between retries after {@code AuthorizationException} is thrown
-	 * by {@code KafkaConsumer}. By default the field is null and retries are disabled.
-	 * In such case the container will be stopped.
+	 * Set the interval between retries after and {@link AuthenticationException} or
+	 * {@code AuthorizationException} is thrown by {@code KafkaConsumer}. By default the
+	 * field is null and retries are disabled. In such case the container will be stopped.
 	 *
 	 * The interval must be less than {@code max.poll.interval.ms} consumer property.
 	 *
 	 * @param authorizationExceptionRetryInterval the duration between retries
 	 * @since 2.3.5
+	 * @deprecated in favor of {@link #setAuthExceptionRetryInterval(Duration)}.
 	 */
+	@Deprecated
 	public void setAuthorizationExceptionRetryInterval(Duration authorizationExceptionRetryInterval) {
-		this.authorizationExceptionRetryInterval = authorizationExceptionRetryInterval;
+		this.authExceptionRetryInterval = authorizationExceptionRetryInterval;
+	}
+
+	/**
+	 * Get the authentication/authorization retry interval.
+	 * @return the interval.
+	 */
+	@Nullable
+	public Duration getAuthExceptionRetryInterval() {
+		return this.authExceptionRetryInterval;
+	}
+
+	/**
+	 * Set the interval between retries after and {@link AuthenticationException} or
+	 * {@code AuthorizationException} is thrown by {@code KafkaConsumer}. By default the
+	 * field is null and retries are disabled. In such case the container will be stopped.
+	 *
+	 * The interval must be less than {@code max.poll.interval.ms} consumer property.
+	 *
+	 * @param authExceptionRetryInterval the duration between retries
+	 * @since 2.8
+	 */
+	public void setAuthExceptionRetryInterval(Duration authExceptionRetryInterval) {
+		this.authExceptionRetryInterval = authExceptionRetryInterval;
 	}
 
 	/**
@@ -449,7 +482,7 @@ public class ConsumerProperties {
 				+ "\n syncCommits=" + this.syncCommits
 				+ (this.syncCommitTimeout != null ? "\n syncCommitTimeout=" + this.syncCommitTimeout : "")
 				+ (this.kafkaConsumerProperties.size() > 0 ? "\n properties=" + this.kafkaConsumerProperties : "")
-				+ "\n authorizationExceptionRetryInterval=" + this.authorizationExceptionRetryInterval
+				+ "\n authExceptionRetryInterval=" + this.authExceptionRetryInterval
 				+ "\n commitRetries=" + this.commitRetries
 				+ "\n fixTxOffsets" + this.fixTxOffsets;
 	}
